@@ -1,9 +1,9 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vfs.encoding;
 
 import com.intellij.diagnostic.ThreadDumper;
 import com.intellij.ide.plugins.PluginManagerCore;
-import com.intellij.lang.Language;
+import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.WriteAction;
 import com.intellij.openapi.application.ex.PathManagerEx;
@@ -40,10 +40,10 @@ import com.intellij.openapi.vfs.*;
 import com.intellij.openapi.vfs.limits.FileSizeLimit;
 import com.intellij.openapi.wm.impl.status.EncodingPanel;
 import com.intellij.psi.PsiDirectory;
-import com.intellij.psi.PsiFile;
 import com.intellij.psi.PsiManager;
 import com.intellij.refactoring.copy.CopyFilesOrDirectoriesHandler;
 import com.intellij.testFramework.*;
+import com.intellij.testFramework.rules.TempDirectory;
 import com.intellij.tools.ide.metrics.benchmark.Benchmark;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.ArrayUtilRt;
@@ -52,9 +52,10 @@ import com.intellij.util.concurrency.ThreadingAssertions;
 import com.intellij.util.text.ByteArrayCharSequence;
 import com.intellij.util.text.XmlCharsetDetector;
 import com.intellij.util.ui.UIUtil;
+import org.intellij.lang.annotations.Language;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.junit.Assert;
+import org.junit.*;
 
 import javax.swing.*;
 import java.io.*;
@@ -62,24 +63,33 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicReference;
 
-import static org.junit.Assert.assertArrayEquals;
+import static java.util.Objects.requireNonNull;
+import static org.junit.Assert.*;
 
-public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialog {
-  private static final Charset US_ASCII = StandardCharsets.US_ASCII;
+@RunsInEdt
+@SuppressWarnings({"UnnecessaryUnicodeEscape", "NonAsciiCharacters"})
+public class FileEncodingTest implements TestDialog {
   private static final Charset WINDOWS_1251 = CharsetToolkit.WIN_1251_CHARSET;
   private static final Charset WINDOWS_1252 = Charset.forName("windows-1252");
   private static final String UTF8_XML_PROLOG = prolog(StandardCharsets.UTF_8);
   private static final byte[] NO_BOM = ArrayUtilRt.EMPTY_BYTE_ARRAY;
-  @org.intellij.lang.annotations.Language("XML")
+  @Language("XML")
   private static final String XML_TEST_BODY = """
     <web-app>
     <!--\u043f\u0430\u043f\u0430-->
     </web-app>""";
   private static final String THREE_RUSSIAN_LETTERS = "\u043F\u0440\u0438\u0432\u0435\u0442";
+
+  @ClassRule public static final EdtRule edt = new EdtRule();
+
+  @Rule public TempDirectory tempDir = new TempDirectory();
+  @Rule public DisposableRule disposable = new DisposableRule();
+  @Rule public ProjectRule project = new ProjectRule();
 
   private TestDialog myOldTestDialogValue;
 
@@ -88,34 +98,90 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     return 0;
   }
 
-  private static String prolog(@NotNull Charset charset) {
-    return "<?xml version=\"1.0\" encoding=\"" + charset.name() + "\"?>\n";
-  }
-
-  @Override
-  protected void setUp() throws Exception {
-    super.setUp();
+  @Before
+  public void setUp() throws Exception {
     myOldTestDialogValue = TestDialogManager.setTestDialog(this);
     EncodingProjectManager.getInstance(getProject()).setDefaultCharsetName(defaultProjectEncoding().name());
   }
 
-  @Override
-  protected void tearDown() throws Exception {
-    try {
-      TestDialogManager.setTestDialog(myOldTestDialogValue);
-    }
-    catch (Throwable e) {
-      addSuppressedException(e);
-    }
-    finally {
-      super.tearDown();
-    }
+  @After
+  public void tearDown() throws Exception {
+    TestDialogManager.setTestDialog(myOldTestDialogValue);
+  }
+
+  private static Charset defaultProjectEncoding() {
+    return StandardCharsets.US_ASCII;  // just for the sake of testing something different from utf-8
+  }
+
+  private static String prolog(Charset charset) {
+    return "<?xml version=\"1.0\" encoding=\"" + charset.name() + "\"?>\n";
   }
 
   private static Document getDocument(VirtualFile file) {
     return FileDocumentManager.getInstance().getDocument(file);
   }
 
+  private static VirtualFile getVirtualFile(Path path) {
+    return requireNonNull(LocalFileSystem.getInstance().refreshAndFindFileByNioFile(path));
+  }
+
+  private static VirtualFile getTestRoot() {
+    File testRoot = new File(PathManagerEx.getCommunityHomePath(), "platform/platform-tests/testData/vfs/encoding");
+    return LocalFileSystem.getInstance().findFileByIoFile(testRoot);
+  }
+
+  private static VirtualFile find(String name) {
+    return requireNonNull(getTestRoot().findChild(name));
+  }
+
+  private static void setText(Document document, String text) {
+    ApplicationManager.getApplication().runWriteAction(() -> document.setText(text));
+  }
+
+  private Disposable getTestRootDisposable() {
+    return disposable.getDisposable();
+  }
+
+  private Project getProject() {
+    return project.getProject();
+  }
+
+  private Module getModule() {
+    return project.getModule();
+  }
+
+  private VirtualFile createFile(String fileName, String text) throws IOException {
+    Path dir = tempDir.newDirectoryPath();
+    VirtualFile vDir = getVirtualFile(dir);
+    return WriteAction.compute(() -> {
+      if (!ModuleRootManager.getInstance(getModule()).getFileIndex().isInSourceContent(vDir)) {
+        PsiTestUtil.addSourceContentToRoots(getModule(), vDir);
+      }
+      VirtualFile vFile = vDir.createChildData(vDir, fileName);
+      LoadTextUtil.write(getProject(), vFile, this, text, -1);
+      assertNotNull(PsiManager.getInstance(getProject()).findFile(vFile));
+      return vFile;
+    });
+  }
+
+  private VirtualFile createTempFile(String ext, byte[] BOM, String content, Charset charset) throws IOException {
+    Path file = Files.createTempFile(tempDir.getRootPath(), "copy", '.' + ext);
+    try (OutputStream stream = Files.newOutputStream(file)) {
+      stream.write(BOM);
+      stream.write(content.getBytes(charset));
+    }
+    Disposer.register(getTestRootDisposable(), () -> {
+      try {
+        Files.delete(file);
+      }
+      catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
+    });
+    return getVirtualFile(file);
+  }
+
+  @Test
   public void testWin1251() {
     VirtualFile vTestRoot = getTestRoot();
     VirtualFile xml = vTestRoot.findChild("xWin1251.xml");
@@ -126,37 +192,38 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(expected, text);
   }
 
+  @Test
   public void testXmlProlog() throws IOException {
     VirtualFile vTestRoot = getTestRoot();
-    VirtualFile xml = Objects.requireNonNull(vTestRoot.findChild("xNotepadUtf8.xml"));
+    VirtualFile xml = requireNonNull(vTestRoot.findChild("xNotepadUtf8.xml"));
 
     String expected = UTF8_XML_PROLOG + XML_TEST_BODY;
     String text = getDocument(xml).getText();
 
     if (!expected.equals(text)) {
       System.err.print("expected = ");
-      for (int i=0; i<50;i++) {
+      for (int i = 0; i < 50; i++) {
         char c = expected.charAt(i);
         System.err.print(Integer.toHexString(c) + ", ");
       }
       System.err.println();
       System.err.print("expected bytes = ");
       byte[] expectedBytes = FileUtil.loadFileBytes(new File(xml.getPath()));
-      for (int i=0; i<50;i++) {
+      for (int i = 0; i < 50; i++) {
         byte c = expectedBytes[i];
         System.err.print(Integer.toHexString(c) + ", ");
       }
       System.err.println();
 
       System.err.print("text = ");
-      for (int i=0; i<50;i++) {
+      for (int i = 0; i < 50; i++) {
         char c = text.charAt(i);
         System.err.print(Integer.toHexString(c) + ", ");
       }
       System.err.println();
       System.err.print("text bytes = ");
       byte[] textBytes = xml.contentsToByteArray();
-      for (int i=0; i<50;i++) {
+      for (int i = 0; i < 50; i++) {
         byte c = textBytes[i];
         System.err.print(Integer.toHexString(c) + ", ");
       }
@@ -169,20 +236,20 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(expected, text);
   }
 
+  @Test
   public void testChangeToUtfProlog() throws IOException {
     VirtualFile src = find("xWin1251.xml");
-    File dir = createTempDirectory();
-    File file = new File(dir, "copy.xml");
-    FileUtil.copy(new File(src.getPath()), file);
+    Path file = tempDir.getRootPath().resolve("copy.xml");
+    Files.copy(src.toNioPath(), file, StandardCopyOption.REPLACE_EXISTING);
 
     WriteCommandAction.writeCommandAction(getProject()).run(() -> {
-      VirtualFile xml = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(file);
+      VirtualFile xml = LocalFileSystem.getInstance().refreshAndFindFileByNioFile(file);
       Document document = getDocument(xml);
 
       setText(document, UTF8_XML_PROLOG + XML_TEST_BODY);
       FileDocumentManager.getInstance().saveAllDocuments();
 
-      byte[] savedBytes = FileUtil.loadFileBytes(file);
+      byte[] savedBytes = Files.readAllBytes(file);
       String saved = new String(savedBytes, StandardCharsets.UTF_8).replace("\r\n", "\n");
       String expected = (UTF8_XML_PROLOG + XML_TEST_BODY).replace("\r\n", "\n");
 
@@ -190,34 +257,35 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     });
   }
 
+  @Test
   public void testDefaultHtml() {
     VirtualFile file = find("defaultHtml.html");
 
     assertEquals(EncodingProjectManager.getInstance(getProject()).getDefaultCharset(), file.getCharset());
   }
 
+  @Test
   public void testSevenBitTextMustBeDetectedAsDefaultProjectEncodingInsteadOfUsAscii() throws IOException {
     VirtualFile file = createTempFile("txt", NO_BOM, "xxx\nxxx", WINDOWS_1251);
 
     assertEquals(defaultProjectEncoding(), file.getCharset());
   }
 
-  private static @NotNull VirtualFile find(String name) {
-    return Objects.requireNonNull(getTestRoot().findChild(name));
-  }
-
+  @Test
   public void testTrickyProlog() {
     VirtualFile xml = find("xTrickyProlog.xml");
 
     assertEquals("Big5", xml.getCharset().name());
   }
 
+  @Test
   public void testDefaultXml() {
     VirtualFile xml = find("xDefault.xml");
 
     assertEquals(StandardCharsets.UTF_8, xml.getCharset());
   }
 
+  @Test
   public void testIbm866() {
     VirtualFile xml = find("xIbm866.xml");
 
@@ -227,13 +295,9 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(expected, text);
   }
 
-  private static VirtualFile getTestRoot() {
-    File testRoot = new File(PathManagerEx.getCommunityHomePath(), "platform/platform-tests/testData/vfs/encoding");
-    return LocalFileSystem.getInstance().findFileByIoFile(testRoot);
-  }
-
+  @Test
   public void testUTF16BOM() throws IOException {
-    VirtualFile file = find(getTestName(false) + ".txt");
+    VirtualFile file = find("UTF16BOM.txt");
     File source = new File(file.getPath());
     byte[] bytesSource = FileUtil.loadFileBytes(source);
     assertTrue(Arrays.toString(bytesSource), CharsetToolkit.hasUTF16LEBom(bytesSource));
@@ -243,7 +307,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     String text = document.getText();
     assertEquals("\u041f\u0440\u0438", text);
 
-    Path copy = getTempDir().newPath("copy.txt");
+    Path copy = tempDir.getRootPath().resolve("copy.txt");
     Files.createDirectories(copy.getParent());
     Files.copy(source.toPath(), copy);
     VirtualFile fileCopy = LocalFileSystem.getInstance().refreshAndFindFileByNioFile(copy);
@@ -257,47 +321,51 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals("[-1, -2, -85, 4, -51, 4, -17, 4]", Arrays.toString(bytes));
   }
 
+  @Test
   public void testMetaHttpEquivHtml() throws IOException {
-    doHtmlTest("<meta http-equiv=\"Content-Type\" content=\"text/html; charset=windows-1252\">",
-               "<meta http-equiv=\"Content-Type\" content=\"text/html;charset=utf-8\">");
+    doHtmlTest(
+      "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=windows-1252\">",
+      "<meta http-equiv=\"Content-Type\" content=\"text/html;charset=utf-8\">"
+    );
   }
 
+  @Test
   public void testMetaCharsetHtml5() throws IOException {
-    doHtmlTest("<meta charset =\"windows-1252\">",
-               "<meta charset =\"utf-8\">");
+    doHtmlTest(
+      "<meta charset =\"windows-1252\">",
+      "<meta charset =\"utf-8\">"
+    );
   }
 
-  private void doHtmlTest(@org.intellij.lang.annotations.Language("HTML") String metaWithWindowsEncoding,
-                          @org.intellij.lang.annotations.Language("HTML") String metaWithUtf8Encoding) throws IOException {
-    VirtualFile file =
-      createTempFile("html", NO_BOM, "<html><head>" + metaWithWindowsEncoding + "</head>" + THREE_RUSSIAN_LETTERS + "</html>",
-                     WINDOWS_1252);
-
+  private void doHtmlTest(@Language("HTML") String metaWithWindowsEncoding, @Language("HTML") String metaWithUtf8Encoding) throws IOException {
+    VirtualFile
+      file = createTempFile("html", NO_BOM, "<html><head>" + metaWithWindowsEncoding + "</head>" + THREE_RUSSIAN_LETTERS + "</html>", WINDOWS_1252);
     assertEquals(WINDOWS_1252, file.getCharset());
 
     Document document = getDocument(file);
-    @org.intellij.lang.annotations.Language("HTML")
-    String text = "<html><head>" + metaWithUtf8Encoding + "</head>" +
-                  THREE_RUSSIAN_LETTERS +
-                  "</html>";
+    @Language("HTML")
+    String text = "<html><head>" + metaWithUtf8Encoding + "</head>" + THREE_RUSSIAN_LETTERS + "</html>";
     setText(document, text);
     FileDocumentManager.getInstance().saveAllDocuments();
-
     assertEquals(StandardCharsets.UTF_8, file.getCharset());
   }
 
+  @Test
   public void testHtmlEncodingPreferBOM() throws IOException {
-    @org.intellij.lang.annotations.Language("HTML")
-    String content = "<html><head><meta http-equiv=\"Content-Type\" content=\"text/html; charset=windows-1252\"></head>" +
-                     THREE_RUSSIAN_LETTERS +
-                     "</html>";
+    @Language("HTML")
+    String content = """
+      <html>
+      <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head>
+      %s
+      </html>""".formatted(THREE_RUSSIAN_LETTERS);
     VirtualFile file = createTempFile("html", CharsetToolkit.UTF8_BOM, content, WINDOWS_1252);
     assertEquals(StandardCharsets.UTF_8, file.getCharset());
     assertArrayEquals(CharsetToolkit.UTF8_BOM, file.getBOM());
   }
 
+  @Test
   public void testHtmlEncodingMustBeCaseInsensitive() throws IOException {
-    @org.intellij.lang.annotations.Language("HTML")
+    @Language("HTML")
     String content = """
       <html>
       <head>
@@ -308,10 +376,12 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
       </body>
       </html>""";
     VirtualFile file = createTempFile("html", NO_BOM, content, WINDOWS_1252);
-    assertEquals(US_ASCII, file.getCharset());
+    assertEquals(StandardCharsets.US_ASCII, file.getCharset());
   }
+
+  @Test
   public void testHtmlContentAttributeOrder() throws IOException {
-    @org.intellij.lang.annotations.Language("HTML")
+    @Language("HTML")
     String content = """
       <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       \t\t"http://www.w3.org/TR/html4/loose.dtd">
@@ -319,15 +389,12 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
       \t<meta content="text/html;charset=US-ASCII" http-equiv="Content-Type">
       </head> </html>""";
     VirtualFile file = createTempFile("html", NO_BOM, content, WINDOWS_1252);
-    assertEquals(US_ASCII, file.getCharset());
+    assertEquals(StandardCharsets.US_ASCII, file.getCharset());
   }
 
-  private static void setText(Document document, String text) {
-    ApplicationManager.getApplication().runWriteAction(() -> document.setText(text));
-  }
-
+  @Test
   public void testXHtmlStuff() throws IOException {
-    @org.intellij.lang.annotations.Language("HTML")
+    @Language("HTML")
     String text = "<xxx>\n</xxx>";
     VirtualFile file = createTempFile("xhtml", NO_BOM, text, WINDOWS_1252);
 
@@ -336,15 +403,16 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     FileDocumentManager.getInstance().saveAllDocuments();
     assertEquals(WINDOWS_1251, file.getCharset());
 
-    setText(document, prolog(US_ASCII) + "\n<xxx></xxx>");
+    setText(document, prolog(StandardCharsets.US_ASCII) + "\n<xxx></xxx>");
     FileDocumentManager.getInstance().saveAllDocuments();
-    assertEquals(US_ASCII, file.getCharset());
+    assertEquals(StandardCharsets.US_ASCII, file.getCharset());
 
     text = prolog(WINDOWS_1252) + "\n<xxx>\n</xxx>";
     file = createTempFile("xhtml", NO_BOM, text, WINDOWS_1252);
     assertEquals(WINDOWS_1252, file.getCharset());
   }
 
+  @Test
   public void testSettingEncodingManually() throws IOException {
     String text = "xyz";
     VirtualFile file = createTempFile("txt", NO_BOM, text, StandardCharsets.UTF_8);
@@ -385,76 +453,59 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
 
     assertTrue(changed[0]);
     changed[0] = false;
-    EncodingProjectManager.getInstance(getProject()).setEncoding(file, US_ASCII);
+    EncodingProjectManager.getInstance(getProject()).setEncoding(file, StandardCharsets.US_ASCII);
     UIUtil.dispatchAllInvocationEvents();
-    assertEquals(US_ASCII, file.getCharset());
+    assertEquals(StandardCharsets.US_ASCII, file.getCharset());
     UIUtil.dispatchAllInvocationEvents();
 
     assertTrue(changed[0]); //reloaded again
 
     //after 'save as US_ASCII' file on disk changed
     bytes = FileUtil.loadFileBytes(ioFile);
-    assertArrayEquals(text.getBytes(US_ASCII), bytes);
+    assertArrayEquals(text.getBytes(StandardCharsets.US_ASCII), bytes);
   }
 
-  private static @NotNull Charset defaultProjectEncoding() {
-    // just for the sake of testing something different from utf-8
-    return StandardCharsets.US_ASCII;
-  }
-
+  @Test
   public void testCopyMove() throws IOException {
-    File root = createTempDirectory();
-    File dir1 = new File(root, "dir1");
-    assertTrue(dir1.mkdir());
-    File dir2 = new File(root, "dir2");
-    assertTrue(dir2.mkdir());
-    VirtualFile vDir1 = getVirtualFile(dir1);
-    VirtualFile vDir2 = getVirtualFile(dir2);
-    assertNotNull(dir1.getPath(), vDir1);
-    assertNotNull(dir2.getPath(), vDir2);
+    VirtualFile vDir1 = getVirtualFile(tempDir.newDirectoryPath("dir1"));
+    VirtualFile vDir2 = getVirtualFile(tempDir.newDirectoryPath("dir2"));
 
     EncodingProjectManager.getInstance(getProject()).setEncoding(vDir1, WINDOWS_1251);
-    EncodingProjectManager.getInstance(getProject()).setEncoding(vDir2, US_ASCII);
+    EncodingProjectManager.getInstance(getProject()).setEncoding(vDir2, StandardCharsets.US_ASCII);
     UIUtil.dispatchAllInvocationEvents();
 
     WriteCommandAction.writeCommandAction(getProject()).run(() -> {
       VirtualFile xxx = vDir1.createChildData(this, "xxx.txt");
-      setFileText(xxx, THREE_RUSSIAN_LETTERS);
+      HeavyPlatformTestCase.setFileText(xxx, THREE_RUSSIAN_LETTERS);
       assertEquals(WINDOWS_1251, xxx.getCharset());
       VirtualFile copied = xxx.copy(this, vDir2, "xxx2.txt");
       assertEquals(WINDOWS_1251, copied.getCharset());
 
       VirtualFile xus = vDir2.createChildData(this, "xxx-us.txt");
-      setFileText(xus, THREE_RUSSIAN_LETTERS);
-      assertEquals(US_ASCII, xus.getCharset());
+      HeavyPlatformTestCase.setFileText(xus, THREE_RUSSIAN_LETTERS);
+      assertEquals(StandardCharsets.US_ASCII, xus.getCharset());
 
       xus.move(this, vDir1);
-      assertEquals(US_ASCII, xus.getCharset());
+      assertEquals(StandardCharsets.US_ASCII, xus.getCharset());
     });
   }
 
+  @Test
   public void testCopyNested() throws IOException {
-    File root = createTempDirectory();
-    File dir1 = new File(root, "dir1");
-    assertTrue(dir1.mkdir());
-    File dir2 = new File(root, "dir2");
-    assertTrue(dir2.mkdir());
-    VirtualFile vDir1 = getVirtualFile(dir1);
-    VirtualFile vDir2 = getVirtualFile(dir2);
-    assertNotNull(dir1.getPath(), vDir1);
-    assertNotNull(dir2.getPath(), vDir2);
+    VirtualFile vDir1 = getVirtualFile(tempDir.newDirectoryPath("dir1"));
+    VirtualFile vDir2 = getVirtualFile(tempDir.newDirectoryPath("dir2"));
 
     EncodingProjectManager.getInstance(getProject()).setEncoding(vDir1, WINDOWS_1251);
-    EncodingProjectManager.getInstance(getProject()).setEncoding(vDir2, US_ASCII);
+    EncodingProjectManager.getInstance(getProject()).setEncoding(vDir2, StandardCharsets.US_ASCII);
     UIUtil.dispatchAllInvocationEvents();
 
     WriteCommandAction.writeCommandAction(getProject()).run(() -> {
       VirtualFile winF = vDir1.createChildData(this, "xxx.txt");
 
-      PsiDirectory psiDir1 = Objects.requireNonNull(PsiManager.getInstance(getProject()).findDirectory(vDir1));
-      PsiDirectory psiDir2 = Objects.requireNonNull(PsiManager.getInstance(getProject()).findDirectory(vDir2));
+      PsiDirectory psiDir1 = requireNonNull(PsiManager.getInstance(getProject()).findDirectory(vDir1));
+      PsiDirectory psiDir2 = requireNonNull(PsiManager.getInstance(getProject()).findDirectory(vDir2));
       CopyFilesOrDirectoriesHandler.copyToDirectory(psiDir1, psiDir1.getName(), psiDir2);
-      VirtualFile winFCopy = Objects.requireNonNull(psiDir2.getVirtualFile().findFileByRelativePath(psiDir1.getName() + "/" + winF.getName()));
+      VirtualFile winFCopy = requireNonNull(psiDir2.getVirtualFile().findFileByRelativePath(psiDir1.getName() + "/" + winF.getName()));
       assertEquals(WINDOWS_1251, winFCopy.getCharset());
       VirtualFile dir1Copy = psiDir2.getVirtualFile().findChild(psiDir1.getName());
       assertEquals(WINDOWS_1251, EncodingProjectManager.getInstance(getProject()).getEncoding(dir1Copy, false));
@@ -462,6 +513,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     });
   }
 
+  @Test
   public void testBOMPersistsAfterEditing() throws IOException {
     VirtualFile file = createTempFile("txt", CharsetToolkit.UTF8_BOM, XML_TEST_BODY, StandardCharsets.UTF_8);
 
@@ -479,6 +531,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertTrue(CharsetToolkit.hasUTF8Bom(bytes));
   }
 
+  @Test
   public void testBOMPersistsAfterIndexRescan() throws IOException {
     VirtualFile file = createTempFile("txt", CharsetToolkit.UTF8_BOM, XML_TEST_BODY, StandardCharsets.UTF_8);
 
@@ -499,6 +552,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertTrue(CharsetToolkit.hasUTF8Bom(bytes));
   }
 
+  @Test
   public void testVFileGetInputStreamIsBOMAware() throws IOException {
     VirtualFile file = find("UTF16BOM.txt");
 
@@ -510,6 +564,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
 
     assertArrayEquals(CharsetToolkit.UTF16LE_BOM, file.getBOM());
   }
+  @Test
   public void testSetCharsetAfter() throws IOException {
     VirtualFile file = find("UTF16LE_NO_BOM.txt");
     file.setCharset(StandardCharsets.UTF_16LE);
@@ -519,6 +574,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertNull(file.getBOM());
   }
 
+  @Test
   public void testBOMResetAfterChangingUtf16ToUtf8() throws IOException {
     VirtualFile file = createTempFile("txt", CharsetToolkit.UTF16BE_BOM, THREE_RUSSIAN_LETTERS, StandardCharsets.UTF_16BE);
 
@@ -542,27 +598,31 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertFalse(CharsetToolkit.hasUTF8Bom(bytes));
   }
 
+  @Test
   public void testConvertNotAvailableForHtml() throws IOException {
     @org.intellij.lang.annotations.Language("HTML")
     String content = "<html><head><meta content=\"text/html; charset=utf-8\" http-equiv=\"content-type\"></head>" +
                      "<body>" + THREE_RUSSIAN_LETTERS +
                      "</body></html>";
-    VirtualFile file = createTempFile("html", NO_BOM, content, StandardCharsets.UTF_8);
-    Document document = FileDocumentManager.getInstance().getDocument(file);
+    VirtualFile virtualFile = createTempFile("html", NO_BOM, content, StandardCharsets.UTF_8);
+    Document document = FileDocumentManager.getInstance().getDocument(virtualFile);
     assertNotNull(document);
     FileDocumentManager.getInstance().saveAllDocuments();
-    FileType fileType = file.getFileType();
+    FileType fileType = virtualFile.getFileType();
     assertEquals(FileTypeManager.getInstance().getStdFileType("HTML"), fileType);
-    Charset fromType = ((LanguageFileType)fileType).extractCharsetFromFileContent(myProject, file, (CharSequence)content);
+    Charset fromType = ((LanguageFileType)fileType).extractCharsetFromFileContent(getProject(), virtualFile, (CharSequence)content);
     assertEquals(StandardCharsets.UTF_8, fromType);
     String fromProlog = XmlCharsetDetector.extractXmlEncodingFromProlog(content);
     assertNull(fromProlog);
-    Charset charsetFromContent = EncodingManagerImpl.computeCharsetFromContent(file);
-    assertEquals(StandardCharsets.UTF_8, charsetFromContent);
-    EncodingUtil.FailReason result = EncodingUtil.checkCanConvert(file);
+    Charset charsetFromContent = EncodingManagerImpl.computeCharsetFromContent(virtualFile);
+    Document docFromVF = FileDocumentManager.getInstance().getDocument(virtualFile);
+    Charset extractedCharset = ((LanguageFileType)fileType).extractCharsetFromFileContent(getProject(), virtualFile, document.getImmutableCharSequence());
+    assertEquals("docFromVF: " + docFromVF + "; fileType=" + fileType + "; extractedCharset=" + extractedCharset, StandardCharsets.UTF_8, charsetFromContent);
+    EncodingUtil.FailReason result = EncodingUtil.checkCanConvert(virtualFile);
     assertEquals(EncodingUtil.FailReason.BY_FILE, result);
   }
 
+  @Test
   public void testConvertReload() throws IOException {
     VirtualFile file = createTempFile("txt", CharsetToolkit.UTF16BE_BOM, THREE_RUSSIAN_LETTERS, StandardCharsets.UTF_16BE);
 
@@ -573,8 +633,8 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
 
     byte[] bytes = file.contentsToByteArray();
     String text = document.getText();
-    Assert.assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
-    Assert.assertSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, US_ASCII));
+    assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
+    assertSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.US_ASCII));
     EncodingUtil.FailReason result = EncodingUtil.checkCanReload(file, null);
     assertEquals(EncodingUtil.FailReason.BY_BOM, result);
 
@@ -583,8 +643,8 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(WINDOWS_1251, file.getCharset());
     assertNull(file.getBOM());
 
-    Assert.assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.UTF_16LE));
-    Assert.assertSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, US_ASCII));
+    assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.UTF_16LE));
+    assertSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.US_ASCII));
     result = EncodingUtil.checkCanReload(file, null);
     assertNull(result);
 
@@ -593,15 +653,15 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(StandardCharsets.UTF_16LE, file.getCharset());
     assertArrayEquals(CharsetToolkit.UTF16LE_BOM, file.getBOM());
 
-    Assert.assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
-    Assert.assertSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, US_ASCII));
+    assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
+    assertSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.US_ASCII));
     result = EncodingUtil.checkCanReload(file, null);
     assertNotNull(result);
 
     text = "xxx";
     setText(document, text);
-    Assert.assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
-    Assert.assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, US_ASCII));
+    assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
+    assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.US_ASCII));
 
     FileDocumentManager.getInstance().saveAllDocuments();
     bytes = file.contentsToByteArray();
@@ -610,42 +670,44 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
 
     text = "qqq";
     setText(document, text);
-    Assert.assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
-    Assert.assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, US_ASCII));
+    assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
+    assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.US_ASCII));
 
-    EncodingUtil.saveIn(getProject(), document, null, file, US_ASCII);
+    EncodingUtil.saveIn(getProject(), document, null, file, StandardCharsets.US_ASCII);
     bytes = file.contentsToByteArray();
-    assertEquals(US_ASCII, file.getCharset());
+    assertEquals(StandardCharsets.US_ASCII, file.getCharset());
     assertNull(file.getBOM());
 
-    Assert.assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
+    assertNotSame(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
     result = EncodingUtil.checkCanReload(file, null);
     assertNull(result);
   }
 
+  @Test
   public void testSetEncodingForDirectoryChangesEncodingsForEvenNotLoadedFiles() throws IOException {
     EncodingProjectManager.getInstance(getProject()).setEncoding(null, StandardCharsets.UTF_8);
     UIUtil.dispatchAllInvocationEvents();
 
     File fc = FileUtil.createTempDirectory("", "");
-    VirtualFile root = Objects.requireNonNull(LocalFileSystem.getInstance().refreshAndFindFileByIoFile(fc));
+    VirtualFile root = requireNonNull(LocalFileSystem.getInstance().refreshAndFindFileByIoFile(fc));
     PsiTestUtil.addContentRoot(getModule(), root);
 
-    VirtualFile file = createChildData(root, "win.txt");
+    VirtualFile file = HeavyPlatformTestCase.createChildData(root, "win.txt");
     Files.writeString(file.toNioPath(), THREE_RUSSIAN_LETTERS, WINDOWS_1251);
     file.refresh(false, false);
 
     assertEquals(StandardCharsets.UTF_8, file.getCharset());
-    Assert.assertNull(file.getBOM());
+    assertNull(file.getBOM());
 
 
     EncodingProjectManager.getInstance(getProject()).setEncoding(root, WINDOWS_1251);
     UIUtil.dispatchAllInvocationEvents();
 
     assertEquals(WINDOWS_1251, file.getCharset());
-    Assert.assertNull(file.getBOM());
+    assertNull(file.getBOM());
   }
 
+  @Test
   public void testExternalChangeClearsAutoDetectedFromBytesFlag() throws IOException {
     VirtualFile file = createTempFile("txt", NO_BOM, THREE_RUSSIAN_LETTERS, StandardCharsets.UTF_8);
     getDocument(file);
@@ -655,56 +717,62 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     Files.writeString(file.toNioPath(), THREE_RUSSIAN_LETTERS, WINDOWS_1251);
     file.refresh(false, false);
 
-    Assert.assertNull(LoadTextUtil.getCharsetAutoDetectionReason(file));
+    assertNull(LoadTextUtil.getCharsetAutoDetectionReason(file));
   }
 
+  @Test
   public void testSafeToConvert() throws IOException {
     String text = "xxx";
     VirtualFile file = createTempFile("txt", NO_BOM, text, StandardCharsets.UTF_8);
     byte[] bytes = file.contentsToByteArray();
-    assertEquals(EncodingUtil.Magic8.ABSOLUTELY, EncodingUtil.isSafeToConvertTo(file, text, bytes, US_ASCII));
+    assertEquals(EncodingUtil.Magic8.ABSOLUTELY, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.US_ASCII));
     assertEquals(EncodingUtil.Magic8.ABSOLUTELY, EncodingUtil.isSafeToConvertTo(file, text, bytes, WINDOWS_1251));
     assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToConvertTo(file, text, bytes, StandardCharsets.UTF_16BE));
 
-    String rusText = THREE_RUSSIAN_LETTERS;
-    VirtualFile rusFile = createTempFile("txt", NO_BOM, rusText, StandardCharsets.UTF_8);
-    byte[] rusBytes = rusFile.contentsToByteArray();
-    assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(rusFile, rusText, rusBytes, US_ASCII));
-    assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToConvertTo(rusFile, rusText, rusBytes, WINDOWS_1251));
-    assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToConvertTo(rusFile, rusText, rusBytes,
-                                                                                        StandardCharsets.UTF_16BE));
+    String cyrText = THREE_RUSSIAN_LETTERS;
+    VirtualFile cyrFile = createTempFile("txt", NO_BOM, cyrText, StandardCharsets.UTF_8);
+    byte[] cyrBytes = cyrFile.contentsToByteArray();
+    assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(cyrFile, cyrText, cyrBytes, StandardCharsets.US_ASCII));
+    assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToConvertTo(cyrFile, cyrText, cyrBytes, WINDOWS_1251));
+    assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToConvertTo(cyrFile, cyrText, cyrBytes, StandardCharsets.UTF_16BE));
 
     String bomText = THREE_RUSSIAN_LETTERS;
     VirtualFile bomFile = createTempFile("txt", CharsetToolkit.UTF16LE_BOM, bomText, StandardCharsets.UTF_16LE);
     byte[] bomBytes = bomFile.contentsToByteArray();
-    assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(bomFile, bomText, bomBytes, US_ASCII));
+    assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToConvertTo(bomFile, bomText, bomBytes, StandardCharsets.US_ASCII));
     assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToConvertTo(bomFile, bomText, bomBytes, WINDOWS_1251));
-    assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToConvertTo(bomFile, bomText, bomBytes,
-                                                                                        StandardCharsets.UTF_16BE));
+    assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToConvertTo(bomFile, bomText, bomBytes, StandardCharsets.UTF_16BE));
   }
+
+  @Test
   public void testSafeToReloadUtf8Bom() throws IOException {
     String text = THREE_RUSSIAN_LETTERS;
     VirtualFile file = createTempFile("txt", CharsetToolkit.UTF8_BOM, text, StandardCharsets.UTF_8);
     byte[] bytes = file.contentsToByteArray();
-    assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToReloadIn(file, text, bytes, US_ASCII));
+    assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToReloadIn(file, text, bytes, StandardCharsets.US_ASCII));
     assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToReloadIn(file, text, bytes, StandardCharsets.UTF_16LE));
   }
+
+  @Test
   public void testSafeToReloadUtf8NoBom() throws IOException {
     String text = THREE_RUSSIAN_LETTERS;
     VirtualFile file = createTempFile("txt", NO_BOM, text, StandardCharsets.UTF_8);
     byte[] bytes = file.contentsToByteArray();
-    assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToReloadIn(file, text, bytes, US_ASCII));
+    assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToReloadIn(file, text, bytes, StandardCharsets.US_ASCII));
     assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToReloadIn(file, text, bytes, StandardCharsets.UTF_16LE));
   }
+
+  @Test
   public void testSafeToReloadText() throws IOException {
     String text = "xxx";
-    VirtualFile file = createTempFile("txt", NO_BOM, text, US_ASCII);
+    VirtualFile file = createTempFile("txt", NO_BOM, text, StandardCharsets.US_ASCII);
     byte[] bytes = file.contentsToByteArray();
     assertEquals(EncodingUtil.Magic8.ABSOLUTELY, EncodingUtil.isSafeToReloadIn(file, text, bytes, WINDOWS_1251));
     assertEquals(EncodingUtil.Magic8.ABSOLUTELY, EncodingUtil.isSafeToReloadIn(file, text, bytes, StandardCharsets.UTF_8));
     assertEquals(EncodingUtil.Magic8.NO_WAY, EncodingUtil.isSafeToReloadIn(file, text, bytes, StandardCharsets.UTF_16LE));
   }
 
+  @Test
   public void testMustBeSafeToReloadISO8859TextMistakenlyLoadedInUTF8() throws IOException {
     @SuppressWarnings("SpellCheckingInspection") String isoText = "No se ha encontrado ningún puesto con ese criterio de búsqueda";
     VirtualFile file = createTempFile("txt", NO_BOM, isoText, StandardCharsets.ISO_8859_1);
@@ -714,6 +782,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(EncodingUtil.Magic8.WELL_IF_YOU_INSIST, EncodingUtil.isSafeToReloadIn(file, utfText, bytes, StandardCharsets.ISO_8859_1));
   }
 
+  @Test
   public void testUndoChangeEncoding() throws IOException {
     VirtualFile file = createTempFile("txt", NO_BOM, "xxx", StandardCharsets.UTF_8);
     file.setCharset(StandardCharsets.UTF_8);
@@ -726,7 +795,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     change(file, WINDOWS_1251);
     assertEquals(WINDOWS_1251, file.getCharset());
 
-    Document document = Objects.requireNonNull(documentManager.getDocument(file));
+    Document document = requireNonNull(documentManager.getDocument(file));
     change(file, StandardCharsets.UTF_8);
     assertEquals(StandardCharsets.UTF_8, file.getCharset());
 
@@ -734,9 +803,20 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     UIUtil.dispatchAllInvocationEvents();
 
     assertEquals(WINDOWS_1251, file.getCharset());
-    Objects.requireNonNull(document.getText());
+    requireNonNull(document.getText());
   }
 
+  private static void change(VirtualFile file, Charset charset) throws IOException {
+    new ChangeFileEncodingAction().chosen(getDocument(file), null, file, file.contentsToByteArray(), charset);
+  }
+
+  private void globalUndo() {
+    UndoManager myManager = UndoManager.getInstance(getProject());
+    assertTrue("undo is not available", myManager.isUndoAvailable(null));
+    myManager.undo(null);
+  }
+
+  @Test
   public void testMustBeAbleForFileAccidentallyLoadedInUTF16ToReloadBackToUtf8() throws IOException {
     VirtualFile file = createTempFile("txt", NO_BOM, "xxx", StandardCharsets.UTF_8);
     file.setCharset(StandardCharsets.UTF_8);
@@ -761,21 +841,11 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(oldText,  document.getText());
   }
 
-  private void globalUndo() {
-    UndoManager myManager = UndoManager.getInstance(getProject());
-    assertTrue("undo is not available", myManager.isUndoAvailable(null));
-    myManager.undo(null);
-
-  }
-
-  private static void change(VirtualFile file, Charset charset) throws IOException {
-    new ChangeFileEncodingAction().chosen(getDocument(file), null, file, file.contentsToByteArray(), charset);
-  }
-
+  @Test
   public void testCantReloadBOMDetected() throws IOException {
     VirtualFile file = createTempFile("txt", CharsetToolkit.UTF8_BOM, THREE_RUSSIAN_LETTERS, StandardCharsets.UTF_8);
     file.contentsToByteArray();
-    Document document = Objects.requireNonNull(FileDocumentManager.getInstance().getDocument(file));
+    Document document = requireNonNull(FileDocumentManager.getInstance().getDocument(file));
     assertEquals(THREE_RUSSIAN_LETTERS, document.getText());
     assertEquals(StandardCharsets.UTF_8, file.getCharset());
     EncodingProjectManager.getInstance(getProject()).setEncoding(file, StandardCharsets.UTF_16LE);
@@ -784,11 +854,12 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(StandardCharsets.UTF_8, file.getCharset());
   }
 
+  @Test
   public void testExternalChangeStrippedBOM() throws IOException {
     String text = "text";
     VirtualFile file = createTempFile("txt", CharsetToolkit.UTF8_BOM, text, StandardCharsets.UTF_8);
     file.contentsToByteArray();
-    Document document = Objects.requireNonNull(FileDocumentManager.getInstance().getDocument(file));
+    Document document = requireNonNull(FileDocumentManager.getInstance().getDocument(file));
 
     assertEquals(text, document.getText());
     assertEquals(StandardCharsets.UTF_8, file.getCharset());
@@ -803,54 +874,34 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertNull(file.getBOM());
   }
 
+  @Test
   public void testNewFileCreatedInProjectEncoding() throws IOException {
     EditorTestUtil.saveEncodingsIn(getProject(), StandardCharsets.UTF_8, WINDOWS_1251, () -> {
-      PsiFile psiFile = createFile("x.txt", "xx");
-      VirtualFile file = psiFile.getVirtualFile();
-
+      VirtualFile file = createFile("x.txt", "xx");
       assertEquals(WINDOWS_1251, file.getCharset());
     });
   }
 
+  @Test
   public void testNewFileCreatedInProjectEncodingEvenIfItSetToDefault() throws IOException {
-    EditorTestUtil.saveEncodingsIn(getProject(), Charset.defaultCharset().name().equals("UTF-8") ? WINDOWS_1251 : StandardCharsets.UTF_8, null, () -> {
-      PsiFile psiFile = createFile("x.txt", "xx");
-      VirtualFile file = psiFile.getVirtualFile();
-
+    Charset newCS = Charset.defaultCharset().name().equals("UTF-8") ? WINDOWS_1251 : StandardCharsets.UTF_8;
+    EditorTestUtil.saveEncodingsIn(getProject(), newCS, null, () -> {
+      VirtualFile file = createFile("x.txt", "xx");
       assertEquals(EncodingProjectManager.getInstance(getProject()).getDefaultCharset(), file.getCharset());
     });
   }
 
-  private @NotNull PsiFile createFile(@NotNull String fileName, @NotNull String text) throws IOException {
-    File dir = createTempDirectory();
-    VirtualFile vDir = LocalFileSystem.getInstance().refreshAndFindFileByPath(dir.getCanonicalPath().replace(File.separatorChar, '/'));
-
-    assert vDir != null : dir;
-    return WriteAction.compute(() -> {
-      if (!ModuleRootManager.getInstance(getModule()).getFileIndex().isInSourceContent(vDir)) {
-        PsiTestUtil.addSourceContentToRoots(getModule(), vDir);
-      }
-
-      VirtualFile vFile = vDir.createChildData(vDir, fileName);
-      LoadTextUtil.write(getProject(), vFile, this, text, -1);
-      assertNotNull(vFile);
-      PsiFile file = getPsiManager().findFile(vFile);
-      assertNotNull(file);
-      return file;
-    });
-  }
-
+  @Test
   public void testTheDefaultProjectEncodingIfNotSpecifiedShouldBeIDEEncoding() throws Exception {
     Charset differentFromDefault = Charset.defaultCharset().equals(WINDOWS_1252) ? WINDOWS_1251 : WINDOWS_1252;
     String oldIDE = EncodingManager.getInstance().getDefaultCharsetName();
     try {
       EncodingManager.getInstance().setDefaultCharsetName(differentFromDefault.name());
 
-      File temp = createTempDirectory();
-      VirtualFile tempDir = Objects.requireNonNull(LocalFileSystem.getInstance().refreshAndFindFileByIoFile(temp));
+      Path temp = tempDir.newDirectoryPath();
+      VirtualFile tempDir = getVirtualFile(temp);
 
-      Project newProject = ProjectManagerEx.getInstanceEx().openProject(Path.of(tempDir.getPath()),
-                                                                        OpenProjectTaskBuilderKt.createTestOpenProjectOptions());
+      Project newProject = ProjectManagerEx.getInstanceEx().openProject(temp, OpenProjectTaskBuilderKt.createTestOpenProjectOptions());
       if (ApplicationManager.getApplication().isDispatchThread()) {
         PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
       }
@@ -861,7 +912,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
         assertEquals(differentFromDefault, newProjectEncoding);
 
         VirtualFile vFile = WriteCommandAction.runWriteCommandAction(newProject, (ThrowableComputable<VirtualFile, IOException>)() -> {
-          Module newModule = ModuleManager.getInstance(newProject).newModule(tempDir.getPath(), "blah");
+          Module newModule = ModuleManager.getInstance(newProject).newModule(temp, "blah");
           ModuleRootModificationUtil.addContentRoot(newModule, tempDir);
           VirtualFile v = tempDir.createChildData(this, "x.txt");
           LoadTextUtil.write(null, v, this, "xx", -1);
@@ -880,28 +931,28 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     }
   }
 
+  @Test
   public void testFileMustNotLoadInWrongEncodingIfAccessedBeforeProjectOpen() {
     VirtualFile dir = find("newEncoding");
-    VirtualFile file = Objects.requireNonNull(dir.findFileByRelativePath("src/xxx.txt"));
+    VirtualFile file = requireNonNull(dir.findFileByRelativePath("src/xxx.txt"));
 
-    Document document = Objects.requireNonNull(FileDocumentManager.getInstance().getDocument(file));
+    Document document = requireNonNull(FileDocumentManager.getInstance().getDocument(file));
     assertNotNull(document.getText());
     UIUtil.dispatchAllInvocationEvents();
 
     Project newEncodingProject = PlatformTestUtil.loadAndOpenProject(dir.toNioPath(), getTestRootDisposable());
-    assertEquals(US_ASCII, file.getCharset());
+    assertEquals(StandardCharsets.US_ASCII, file.getCharset());
     assertTrue(newEncodingProject.isOpen());
   }
 
+  @Test
   public void testFileInsideJarCorrectlyHandlesBOM() throws IOException {
-    File tmpDir = createTempDirectory();
-    File jar = new File(tmpDir, "x.jar");
+    Path jar = tempDir.getRootPath().resolve("x.jar");
     String text = "update";
     byte[] bytes = ArrayUtil.mergeArrays(CharsetToolkit.UTF16BE_BOM, text.getBytes(StandardCharsets.UTF_16BE));
     String name = "some_random_name";
-    IoTestUtil.createTestJar(jar, Collections.singletonList(Pair.create(name, bytes)));
-    VirtualFile vFile = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(jar);
-    assertNotNull(vFile);
+    IoTestUtil.createTestJar(jar.toFile(), List.of(Pair.create(name, bytes)));
+    VirtualFile vFile = getVirtualFile(jar);
     VirtualFile jarRoot = JarFileSystem.getInstance().getJarRootForLocalFile(vFile);
     assertNotNull(jarRoot);
 
@@ -916,22 +967,21 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     }
   }
 
+  @Test
   public void testBigFileInsideJarCorrectlyHandlesBOM() throws IOException {
-    File tmpDir = createTempDirectory();
-    File jar = new File(tmpDir, "x.jar");
+    Path jar = tempDir.getRootPath().resolve("x.jar");
     String bigText = StringUtil.repeat("u", FileSizeLimit.getDefaultContentLoadLimit() + 1);
     byte[] utf16beBytes = ArrayUtil.mergeArrays(CharsetToolkit.UTF16BE_BOM, bigText.getBytes(StandardCharsets.UTF_16BE));
     String name = "some_random_name";
-    IoTestUtil.createTestJar(jar, Collections.singletonList(Pair.create(name, utf16beBytes)));
-    VirtualFile vFile = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(jar);
-    assertNotNull(vFile);
+    IoTestUtil.createTestJar(jar.toFile(), List.of(Pair.create(name, utf16beBytes)));
+    VirtualFile vFile = getVirtualFile(jar);
     VirtualFile jarRoot = JarFileSystem.getInstance().getJarRootForLocalFile(vFile);
     assertNotNull(jarRoot);
 
     VirtualFile file = jarRoot.findChild(name);
     assertNotNull(file);
     try (InputStream stream = file.getInputStream()) {
-      String loaded = new String(FileUtil.loadBytes(stream, 8192*2), StandardCharsets.UTF_16BE);
+      String loaded = new String(FileUtil.loadBytes(stream, 8192 * 2), StandardCharsets.UTF_16BE);
       assertEquals(bigText.substring(0, 8192), loaded);
     }
     assertEquals(PlainTextFileType.INSTANCE, file.getFileType());
@@ -941,13 +991,14 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     //assertEquals(text, LoadTextUtil.loadText(file).toString());
   }
 
+  @Test
   public void testSevenBitFileTextOptimisationWorks() throws IOException {
-    PsiFile file = createFile("x.txt", "some random\nfile content\n");
-    VirtualFile virtualFile = file.getVirtualFile();
+    VirtualFile virtualFile = createFile("x.txt", "some random\nfile content\n");
     CharSequence loaded = LoadTextUtil.loadText(virtualFile);
-    assertInstanceOf(loaded, ByteArrayCharSequence.class);
+    assertTrue(loaded.getClass().getName(), loaded instanceof ByteArrayCharSequence);
   }
 
+  @Test
   public void testUTF16LEWithNoBOMIsAThing() throws IOException {
     String text = "text";
     VirtualFile vFile = createTempFile("txt", NO_BOM, text, StandardCharsets.UTF_16LE);
@@ -958,6 +1009,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(text, loaded.toString());
   }
 
+  @Test
   public void testNewUTF8FileCanBeCreatedWithOrWithoutBOMDependingOnTheSettings() throws IOException {
     EncodingProjectManagerImpl manager = (EncodingProjectManagerImpl)EncodingProjectManager.getInstance(getProject());
     EncodingProjectManagerImpl.BOMForNewUTF8Files old = manager.getBOMForNewUTF8Files();
@@ -965,34 +1017,34 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     manager.setDefaultCharsetName(CharsetToolkit.UTF8);
     try {
       manager.setBOMForNewUtf8Files(EncodingProjectManagerImpl.BOMForNewUTF8Files.NEVER);
-      VirtualFile file = createFile("x.txt", "xx").getVirtualFile();
+      VirtualFile file = createFile("x.txt", "xx");
       assertNull(file.getBOM());
-      @org.intellij.lang.annotations.Language("XML")
+      @Language("XML")
       String xxTag = "<xx/>";
       // internal files must never be BOMed
-      VirtualFile imlFile = createFile("x.iml", xxTag).getVirtualFile();
+      VirtualFile imlFile = createFile("x.iml", xxTag);
       assertNull(imlFile.getBOM());
 
       manager.setBOMForNewUtf8Files(EncodingProjectManagerImpl.BOMForNewUTF8Files.ALWAYS);
-      VirtualFile file2 = createFile("x2.txt", "xx").getVirtualFile();
+      VirtualFile file2 = createFile("x2.txt", "xx");
       assertArrayEquals(CharsetToolkit.UTF8_BOM, file2.getBOM());
       // internal files must never be BOMed
-      imlFile = createFile("x2.iml", xxTag).getVirtualFile();
+      imlFile = createFile("x2.iml", xxTag);
       assertNull(imlFile.getBOM());
 
       manager.setBOMForNewUtf8Files(EncodingProjectManagerImpl.BOMForNewUTF8Files.WINDOWS_ONLY);
-      VirtualFile file3 = createFile("x3.txt", "xx").getVirtualFile();
+      VirtualFile file3 = createFile("x3.txt", "xx");
       byte[] expected = SystemInfo.isWindows ? CharsetToolkit.UTF8_BOM : null;
       assertArrayEquals(expected, file3.getBOM());
       // internal files must never be BOMed
-      imlFile = createFile("x3.iml", xxTag).getVirtualFile();
+      imlFile = createFile("x3.iml", xxTag);
       assertNull(imlFile.getBOM());
 
       manager.setBOMForNewUtf8Files(EncodingProjectManagerImpl.BOMForNewUTF8Files.NEVER);
-      VirtualFile file4 = createFile("x4.txt", "xx").getVirtualFile();
+      VirtualFile file4 = createFile("x4.txt", "xx");
       assertNull(file4.getBOM());
       // internal files must never be BOMed
-      imlFile = createFile("x4.iml", xxTag).getVirtualFile();
+      imlFile = createFile("x4.iml", xxTag);
       assertNull(imlFile.getBOM());
     }
     finally {
@@ -1001,13 +1053,14 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     }
   }
 
+  @Test
   public void testBigFileAutoDetectedAsTextMustDetermineItsEncodingFromTheWholeTextToMinimizePossibilityOfUmlautInTheEndMisDetectionError() throws IOException {
     // must not allow sheer luck to have guessed UTF-8 correctly
-    EncodingProjectManager.getInstance(getProject()).setDefaultCharsetName(US_ASCII.name());
+    EncodingProjectManager.getInstance(getProject()).setDefaultCharsetName(StandardCharsets.US_ASCII.name());
     VirtualFile src = getTestRoot().findChild("BIG_CHANGES");
     assertNotNull(src);
 
-    // create new file to avoid caching the file AUTO_DETECTED attribute. we need to re-detect it from scratch to test its correctness
+    // create a new file to avoid caching the file AUTO_DETECTED attribute. we need to re-detect it from scratch to test its correctness
     VirtualFile file = createTempFile("blah-blah", NO_BOM, new String(src.contentsToByteArray(), StandardCharsets.UTF_8), StandardCharsets.UTF_8);
 
     assertNull(file.getBOM());
@@ -1015,14 +1068,15 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(StandardCharsets.UTF_8, file.getCharset());
   }
 
+  @Test
   public void testEncodingReDetectionRequestsOnDocumentChangeAreBatchedToImprovePerformance() throws IOException {
-    VirtualFile file = createTempFile("txt", NO_BOM, "xxx", US_ASCII);
-    Document document = Objects.requireNonNull(getDocument(file));
-    WriteCommandAction.runWriteCommandAction(myProject, () -> document.insertString(0, " "));
+    VirtualFile file = createTempFile("txt", NO_BOM, "xxx", StandardCharsets.US_ASCII);
+    Document document = requireNonNull(getDocument(file));
+    WriteCommandAction.runWriteCommandAction(getProject(), () -> document.insertString(0, " "));
     EncodingManagerImpl encodingManager = (EncodingManagerImpl)EncodingManager.getInstance();
     encodingManager.waitAllTasksExecuted();
     Benchmark.newBenchmark("encoding re-detect requests", ()->{
-      for (int i=0; i<100_000_000;i++) {
+      for (int i = 0; i < 100_000_000; i++) {
         encodingManager.queueUpdateEncodingFromContent(document);
       }
       encodingManager.waitAllTasksExecuted();
@@ -1030,11 +1084,12 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     }).start();
   }
 
+  @Test
   public void testEncodingDetectionRequestsRunAtMostOneThreadForEachDocument() throws Throwable {
     Map<VirtualFile, Thread> detectThreads = new ConcurrentHashMap<>();
     AtomicReference<Throwable> exception = new AtomicReference<>();
     class MyFT extends LanguageFileType implements FileTypeIdentifiableByVirtualFile {
-      private MyFT() { super(new Language("my") {}); }
+      private MyFT() { super(new com.intellij.lang.Language("my") {}); }
       @Override public boolean isMyFileType(@NotNull VirtualFile file) { return getDefaultExtension().equals(file.getExtension()); }
       @Override public @NotNull String getName() { return "my"; }
       @Override public @NotNull String getDescription() { return getName(); }
@@ -1049,7 +1104,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
             exception.set(new Throwable(file +" has two detection threads: "+prev +" and "+ Thread.currentThread()+"\nThe full thread dump:\n"+ThreadDumper.dumpThreadsToString()));
           }
           TimeoutUtil.sleep(1000);
-          return US_ASCII;
+          return StandardCharsets.US_ASCII;
         }
         finally {
           detectThreads.remove(file);
@@ -1057,17 +1112,17 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
       }
     }
 
-    FileType foo = new MyFT();
+    MyFT foo = new MyFT();
     ((FileTypeManagerImpl)FileTypeManagerEx.getInstanceEx()).registerFileType(foo, List.of(), getTestRootDisposable(), PluginManagerCore.getPlugin(PluginManagerCore.CORE_ID));
 
-    VirtualFile file = createTempFile("my", NO_BOM, StringUtil.repeat("c", 20), US_ASCII);
+    VirtualFile file = createTempFile("my", NO_BOM, StringUtil.repeat("c", 20), StandardCharsets.US_ASCII);
     FileEditorManager.getInstance(getProject()).openFile(file, false);
 
     Document document = getDocument(file);
     assertEquals(foo, file.getFileType());
     file.setCharset(null);
 
-    for (int i=0; i<1000; i++) {
+    for (int i = 0; i < 1000; i++) {
       WriteCommandAction.runWriteCommandAction(getProject(), () -> document.insertString(0, " "));
     }
 
@@ -1083,24 +1138,26 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     }
   }
 
+  @Test
   public void testSetMappingMustResetEncodingOfNotYetLoadedFiles() {
-    VirtualFile dir = getTempDir().createVirtualDir();
+    VirtualFile dir = getVirtualFile(tempDir.getRootPath());
     ModuleRootModificationUtil.addContentRoot(getModule(), dir);
-    VirtualFile file = createChildData(dir, "my.txt");
-    setFileText(file, "xxx");
-    file.setCharset(US_ASCII);
+    VirtualFile file = HeavyPlatformTestCase.createChildData(dir, "my.txt");
+    HeavyPlatformTestCase.setFileText(file, "xxx");
+    file.setCharset(StandardCharsets.US_ASCII);
     FileDocumentManager.getInstance().saveAllDocuments();
     UIUtil.dispatchAllInvocationEvents();
 
     assertNull(FileDocumentManager.getInstance().getCachedDocument(file));
-    assertEquals(US_ASCII, file.getCharset());
+    assertEquals(StandardCharsets.US_ASCII, file.getCharset());
 
     ((EncodingProjectManagerImpl)EncodingProjectManager.getInstance(getProject())).setMapping(Collections.singletonMap(dir, WINDOWS_1251));
     assertEquals(WINDOWS_1251, file.getCharset());
   }
 
+  @Test
   public void testEncodingMappingMustNotContainInvalidFiles() {
-    VirtualFile dir = getTempDir().createVirtualDir();
+    VirtualFile dir = getVirtualFile(tempDir.getRootPath());
     VirtualFile root = dir.getParent();
     ModuleRootModificationUtil.addContentRoot(getModule(), dir);
     FileDocumentManager.getInstance().saveAllDocuments();
@@ -1110,7 +1167,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     Set<? extends VirtualFile> mappings = ((EncodingProjectManagerImpl)EncodingProjectManager.getInstance(getProject())).getAllMappings().keySet();
     assertTrue(mappings.contains(dir));
 
-    delete(dir);
+    VfsTestUtil.deleteFile(dir);
     UIUtil.dispatchAllInvocationEvents();
     assertFalse(dir.isValid());
 
@@ -1120,7 +1177,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
       assertTrue(mapping.isValid());
     }
 
-    dir = createChildDirectory(root, dir.getName());
+    dir = HeavyPlatformTestCase.createChildDirectory(root, dir.getName());
 
     mappings = ((EncodingProjectManagerImpl)EncodingProjectManager.getInstance(getProject())).getAllMappings().keySet();
     assertTrue(mappings.contains(dir));
@@ -1129,6 +1186,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     }
   }
 
+  @Test
   public void testFileEncodingProviderOverridesMapping() throws IOException {
     FileEncodingProvider encodingProvider = new FileEncodingProvider() {
       @Override
@@ -1149,10 +1207,11 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     }
   }
 
+  @Test
   public void testForcedCharsetOverridesFileEncodingProvider() throws IOException {
-    final String ext = "yyy";
+    String ext = "yyy";
     class MyForcedFileType extends LanguageFileType {
-      protected MyForcedFileType() { super(new Language("test") {}); }
+      protected MyForcedFileType() { super(new com.intellij.lang.Language("test") {}); }
       @Override public @NotNull String getName() { return "Test"; }
       @Override public @NotNull String getDescription() { return "Test"; }
       @Override public @NotNull String getDefaultExtension() { return ext; }
@@ -1170,6 +1229,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(StandardCharsets.ISO_8859_1, file.getCharset());
   }
 
+  @Test
   public void testDetectedCharsetOverridesFileEncodingProvider() throws IOException {
     FileEncodingProvider encodingProvider = (__, project) -> WINDOWS_1251;
     FileEncodingProvider.EP_NAME.getPoint().registerExtension(encodingProvider, getTestRootDisposable());
@@ -1178,21 +1238,10 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(LoadTextUtil.AutoDetectionReason.FROM_BYTES, LoadTextUtil.getCharsetAutoDetectionReason(file));
   }
 
-  private @NotNull VirtualFile createTempFile(@NotNull String ext, byte @NotNull [] BOM, @NotNull String content, @NotNull Charset charset) throws IOException {
-    File file = FileUtil.createTempFile("copy", "." + ext);
-    FileOutputStream stream = new FileOutputStream(file);
-    stream.write(BOM);
-    try (OutputStreamWriter writer = new OutputStreamWriter(stream, charset)) {
-      writer.write(content);
-    }
-
-    disposeOnTearDown(() -> FileUtil.delete(file));
-    return getVirtualFile(file);
-  }
-
+  @Test
   public void testEncodingWidgetMustBeAvailableForReadonlyFiles() {
     Project project = getProject();
-    EncodingPanel panel = new EncodingPanel(project, ((ComponentManagerEx)project).getCoroutineScope()) {
+    @SuppressWarnings("UsagesOfObsoleteApi") EncodingPanel panel = new EncodingPanel(project, ((ComponentManagerEx)project).getCoroutineScope()) {
       @Override
       protected VirtualFile getSelectedFile() {
         LightVirtualFile file = new LightVirtualFile("x.txt", "xxx");
@@ -1205,6 +1254,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     Disposer.dispose(panel);
   }
 
+  @Test
   public void testWindows1252MustBeDetectedEvenIfItLooksLikeInvalidUtf8() {
     EncodingProjectManager.getInstance(getProject()).setDefaultCharsetName(WINDOWS_1252.name());
     VirtualFile v = find("StartWin1252");
